<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SetPriceFragment">

    <TextView
        android:id="@+id/titlePriceSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_price_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textHighPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/edit_high_price"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/pickerHighPtice"
        app:layout_constraintEnd_toStartOf="@+id/pickerHighPtice"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/pickerHighPtice" />

    <NumberPicker
        android:id="@+id/pickerHighPtice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titlePriceSettings"
        app:layout_constraintBottom_toBottomOf="@+id/textHighPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textYenBit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_yen_bit"
        app:layout_constraintBottom_toBottomOf="@+id/pickerHighPtice"
        app:layout_constraintStart_toEndOf="@+id/pickerHighPtice"
        app:layout_constraintTop_toTopOf="@+id/pickerHighPtice" />

    <Button
        android:id="@+id/btnSetHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="設定"
        app:layout_constraintBottom_toBottomOf="@+id/textYenBit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textYenBit"
        app:layout_constraintTop_toTopOf="@+id/textYenBit" />

    <TextView
        android:id="@+id/textLowPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/edit_low_price"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textHighPrice"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/textHighPrice"
        app:layout_constraintTop_toBottomOf="@+id/pickerHighPtice" />

    <EditText
        android:id="@+id/editLowPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_low_price"
        app:layout_constraintBottom_toBottomOf="@+id/textLowPrice"
        app:layout_constraintStart_toEndOf="@+id/textLowPrice" />

    <TextView
        android:id="@+id/textLowYenBit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_yen_bit"
        app:layout_constraintBottom_toBottomOf="@+id/editLowPrice"
        app:layout_constraintStart_toEndOf="@+id/editLowPrice"
        app:layout_constraintTop_toTopOf="@+id/editLowPrice" />

    <Button
        android:id="@+id/btnSetLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="設定"
        app:layout_constraintBottom_toBottomOf="@+id/textLowYenBit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textLowYenBit"
        app:layout_constraintTop_toTopOf="@+id/textLowYenBit" />

    <Switch
        android:id="@+id/switchNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/text_noti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLowPrice" />

    <TextView
        android:id="@+id/textPriceConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_price_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchNotification" />


    <Button
        android:id="@+id/btnGetCurrentBit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="現在のレートを取得"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>